--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "body-parser": "*",
     "express": "^5.0.0-alpha.1",
     "path": "*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/elisam98/safetelecom-console.git"
   }
 }
